<resources>
    <string name="app_name">Coverter</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="convert_from">Convert from?</string>
    <string name="sterling_pouds">Sterling Pouds</string>
    <string name="euros">Euros</string>
    <string name="us_dollars">US Dollars</string>
    <string name="south_african_rand">South African Rand</string>
    <string name="singapore_dollars">Singapore Dollars</string>
    <string name="nigerian_naira">Nigerian Naira</string>
    <string name="convert">Convert</string>
    <string name="kenyan_currency">Amount in ksh :%s</string>
</resources>